--- a/TallerWeb/index.html
+++ b/TallerWeb/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/server.js"></script>
+    <p1 id="parrafo"></p1>
   </body>
 </html>
